Workload_Generator/sample-deployment-resources/app3/app3-m3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: a3m3
  labels:
    app: a3m3
spec:
  containers:
  - name: a3m3
    image: samodha/dummy-microservice:a3m3
    resources:
      requests:
        cpu: "100m"
    imagePullPolicy: Always
    ports:
    - containerPort: 8080
