Workload_Generator/sample-deployment-resources/app3/app3-m1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: a3m1
  labels:
    app: a3m1
    service: a3m1
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: a3m1
