Workload_Generator/sample-deployment-resources/app3/app3-m3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: a3m3
  labels:
    app: a3m3
    service: a3m3
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: a3m3
