Workload_Generator/sample-deployment-resources/app3/app3-m4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: a3m4
  labels:
    app: a3m4
    service: a3m4
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: a3m4
